cert_manager/ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host('veronez.net')
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  tls:
    secretName: veronez-net-secret
