cert_manager/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host('veronez.net')
    kind: Rule
    services:
    - name: nginx-service
      port: 80
